refactor: ClientOrderServiceImpl 중복 코드 수정
q

-